<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/main_bg"
              android:gravity="center"
        >
    <TextView
            android:id="@+id/rule_firewall_info_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_block_rule"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp"
            />
    <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bootstrap_divider"
            android:layout_marginBottom="10dp"
            />
    <RadioGroup
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            >
        <RadioButton
                android:id="@+id/block_black_btn"
                android:layout_width="80dip"
                android:layout_height="30dip"
                android:text="@string/block_black"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_weight="1"
                android:checked="true"
                android:button="@null"
                android:background="@drawable/radio"
                />
        <RadioButton
                android:id="@+id/allow_white_btn"
                android:layout_width="80dip"
                android:layout_height="30dip"
                android:text="@string/allow_white"
                android:layout_marginLeft="5dp"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_weight="1"
                android:button="@null"
                android:background="@drawable/radio"
                />
        <RadioButton
                android:id="@+id/block_all_btn"
                android:layout_width="80dip"
                android:layout_height="30dip"
                android:text="@string/block_all"
                android:layout_marginLeft="5dp"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_weight="1"
                android:button="@null"
                android:background="@drawable/radio"
                />
    </RadioGroup>
    <TextView
            android:id="@+id/rule_ring_info_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ring_select"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp"
            />
    <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bootstrap_divider"
            android:layout_marginBottom="10dp"
            />
    <RadioGroup
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
        <RadioButton
                android:id="@+id/ring_user_busy_btn"
                android:layout_width="60dip"
                android:layout_height="30dip"
                android:text="@string/user_busy"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_weight="1"
                android:checked="true"
                android:button="@null"
                android:background="@drawable/radio"
                />
        <RadioButton
                android:id="@+id/ring_null_number_btn"
                android:layout_width="60dip"
                android:layout_height="30dip"
                android:text="@string/null_number"
                android:layout_marginLeft="5dp"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_weight="1"
                android:button="@null"
                android:background="@drawable/radio"
                />
        <RadioButton
                android:id="@+id/ring_fee_arrears_btn"
                android:layout_width="60dip"
                android:layout_height="30dip"
                android:text="@string/fee_arrears"
                android:layout_marginLeft="5dp"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_weight="1"
                android:button="@null"
                android:background="@drawable/radio"
                />
        <RadioButton
                android:id="@+id/ring_shut_down_btn"
                android:layout_width="60dip"
                android:layout_height="30dip"
                android:text="@string/shut_down"
                android:layout_marginLeft="5dp"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_weight="1"
                android:button="@null"
                android:background="@drawable/radio"
                />
    </RadioGroup>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="20dp"
                  android:gravity="center"
                  android:layout_marginBottom="30dp"
            >
        <TextView
                android:id="@+id/note"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/number"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                />
        <EditText
                android:id="@+id/input_number"
                android:layout_width="140dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/edit_text_background"
                />
        <Button android:id="@+id/rule_setting_btn"
                android:layout_width="60dip"
                android:layout_height="30dip"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/rule_setting"
                style="@style/BootstrapButton"
                />
     </LinearLayout>
    <TextView
            android:id="@+id/rule_ring_info_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp"
            />
    <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bootstrap_divider"
            android:layout_marginBottom="10dp"
            />
    <TextView
            android:id="@+id/rule_ring_info_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            />

</LinearLayout>
