<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/main_bg"
              android:gravity="center"
        >
    <TextView
            android:id="@+id/service_status_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World, MainActivity"
            android:layout_marginBottom="30dp"
            />
    <ProgressBar
            android:id="@+id/pb_loading"
            style="@style/ListSpinner"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:layout_marginBottom="30dp"
            />
    <Button android:id="@+id/run_btn"
            android:layout_width="150dip"
            android:layout_height="50dip"
            android:text="@string/run_service"
            style="@style/BootstrapButton"
            android:layout_marginBottom="10dp"
            />
    <Button android:id="@+id/stop_btn"
            android:layout_width="150dip"
            android:layout_height="50dip"
            android:text="@string/stop_service"
            style="@style/BootstrapButton"
            android:layout_marginBottom="10dp"
            />
    <Button android:id="@+id/setting_btn"
            android:layout_width="150dip"
            android:layout_height="50dip"
            android:text="@string/setting_service"
            style="@style/BootstrapButton"
            android:layout_marginBottom="10dp"
            />
    <Button android:id="@+id/view_log_btn"
            android:layout_width="150dip"
            android:layout_height="50dip"
            android:text="@string/view_log"
            style="@style/BootstrapButton"
            />



</LinearLayout>

